sl-arch-01/network-policies/inbound-allow-local.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: inbound-allow-local
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
    - from:
      - ipBlock:
          cidr: 172.31.0.0/16
