sl-arch-01/network-policies/outbound-allow-dns.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: outbound-allow-dns
spec:
  podSelector: {}
  policyTypes:
  - Egress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            netpol: dns
