sl-arch-01/network-policies/outbound-allow-internet.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: outbound-allow-internet
spec:
  podSelector:
    matchLabels:
      app: ubuntu
  policyTypes:
  - Egress
  egress:
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
