sl-arch-01/network-policies/outbound-allow-proxy-hub.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: outbound-allow-proxy-hub
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            netpol: proxy-hub
