sl-arch-01/network-policies/outbound-allow-sector-2.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: outbound-allow-sector-2
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            netpol: sector-2
